Versão com caminho compatível com macOS/Linux